# tictac

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
src/tictac/: __init__.py  __init__.pyi  __main__.py  core.py  image.py
test/: test_core.py  test_image.py  test_main.py
test/data/8_3V/: Patient_test_Study_10_Scan_10_Bed_1_Dyn_1.dcm  Patient_test_Study_10_Scan_10_Bed_1_Dyn_2.dcm  Patient_test_Study_10_Scan_10_Bed_1_Dyn_3.dcm  Patient_test_Study_10_Scan_10_Bed_1_Dyn_4.dcm  Patient_test_Study_10_Scan_10_Bed_1_Dyn_5.dcm  Patient_test_Study_10_Scan_10_Bed_1_Dyn_6.dcm  Patient_test_Study_10_Scan_10_Bed_1_Dyn_7.dcm  Patient_test_Study_10_Scan_10_Bed_1_Dyn_8.dcm  Patient_test_Study_10_Scan_10_Bed_1_Dyn_9.dcm
test/data/8_3V_seg/: Segmentation.nrrd  Segmentation3.nii  Segmentation4.nii
